# edu-up

./: .gitignore  .gitmodules  Makefile  TODO.md  docker-compose.yml  dockerfile
client/: Strings.elm  ports.js
client/src/: Api.elm  Capsule.elm  Config.elm  Device.elm  Lang.elm  Ports.elm  Route.elm  Utils.elm
client/src/Acquisition/: Ports.elm  Subscriptions.elm  Types.elm  Updates.elm  Views.elm
client/src/Admin/: Types.elm  Updates.elm  Utils.elm  Views.elm
client/src/Api/: Admin.elm  Capsule.elm  Group.elm  User.elm
client/src/App/: Types.elm  Updates.elm  Utils.elm  Views.elm
client/src/Collaboration/: Updates.elm  Views.elm
client/src/Core/: HomeView.elm  Types.elm  Utils.elm
client/src/Courses/: Types.elm  Updates.elm  Views.elm
client/src/Data/: Capsule.elm  Group.elm  Types.elm  User.elm
client/src/Error/: Types.elm  Views.elm
client/src/Home/: Types.elm  Updates.elm  Views.elm
client/src/NewCapsule/: Types.elm  Updates.elm  Views.elm
client/src/NewCourse/: Types.elm  Updates.elm  Views.elm
client/src/Options/: Types.elm  Updates.elm  Views.elm
client/src/Preparation/: Types.elm  Updates.elm  Views.elm
client/src/Production/: Ports.elm  Subscriptions.elm  Types.elm  Updates.elm  Views.elm
client/src/Profile/: Views.elm
client/src/Publication/: Types.elm  Updates.elm  Views.elm
client/src/Ui/: Elements.elm  LeftColumn.elm  Navbar.elm
client/src/Unlogged/: Types.elm  Views.elm
client/strings/: EnUs.po  FrFr.po  strings.pot
scripts/: converter.py  popy.py  producer.py  psh  publisher.py  requirements.txt  utils.py  vars.py
server/: .gitignore  Cargo.docker.toml  Cargo.toml  Rocket.tpl.toml
server/src/: command.rs  config.rs  lib.rs  mailer.rs  main.rs  openid.rs  s3.rs  storage.rs  tasks.rs  templates.rs  websockets.rs  worker.rs
server/src/db/: capsule.rs  group.rs  mod.rs  stats.rs  task_status.rs  user.rs
server/src/routes/: admin.rs  capsule.rs  group.rs  mod.rs  user.rs  watch.rs
