[package]
name = "polymny"
version = "3.0.0"
authors = ["Thomas Forgione <thomas@polymny.studio>", "Nicolas Bertrand <nicolas@polymny.studio>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["git"]
git = ["compile-time-run"]

[dependencies]
bcrypt = "0.14.0"
ergol = { version = "0.1.3", features = ["with-serde_json-1", "with-chrono-0_4", "with-rocket" ] }
ergol_cli = { version = "0.1.3" }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.99"
rocket = { version = "0.5.0-rc.4", features = ["json", "secrets" ] }
rocket_ws = "0.1.0-rc.4"
lettre = "0.10.4"
tokio = { version = "1.6.1", features = ["fs"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
futures = "0.3.12"
harsh = "0.2.2"
rayon = "1.7.0"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
compile-time-run = { version = "0.2.12", optional = true }
chrono = { version = "0.4.24", features = ["serde"] }
time = "0.3.20"
futures-sink = "0.3.28"
lazy_static = "1.4"
simplelog = { git = "https://github.com/polymny/simplelog.rs" }
color-backtrace = "0.5"
sha256 = "1.2.1"

aws-types =  "0.55.3"
aws-credential-types = { version = "0.55.3", features = ["hardcoded-credentials"] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"

lapin = "2.2.1"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.15"
num_cpus = "1.16.0"
jsonwebtoken = "9.1.0"
reqwest = { version = "0.11.22", features = ["json"] }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "reset-db"
path = "src/reset_db.rs"

[[bin]]
name = "harsh"
path = "src/harsh.rs"

[[bin]]
name = "user-disk_usage"
path = "src/user_disk_usage.rs"

[[bin]]
name = "update-video-duration"
path = "src/update_video_duration.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"
